--- a/NXRemotingProject/NXRemotingProject/MainWindow.xaml
+++ b/NXRemotingProject/NXRemotingProject/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Button x:Name="button" Content="Select Airfoil" HorizontalAlignment="Left" Margin="101,49,0,0" VerticalAlignment="Top" Width="75" Click="selectAirfoil"/>
+        <Button x:Name="button1" Content="Button" HorizontalAlignment="Left" Margin="274,170,0,0" VerticalAlignment="Top" Width="75" Click="button1_Click"/>
+
     </Grid>
 </Window>
