--- a/NXRemotingProject/NXRemotingProject/MainWindow.xaml
+++ b/NXRemotingProject/NXRemotingProject/MainWindow.xaml
@@ -5,9 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NXRemotingProject"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        <Button x:Name="button" Content="Select Airfoil" HorizontalAlignment="Left" Margin="101,49,0,0" VerticalAlignment="Top" Width="75" Click="selectAirfoil"/>
-
+        Title="MainWindow" Height="275.692" Width="455">
+    <Grid Margin="0,0,2,0">
+        <Button x:Name="browseButton" Content="Browse..." HorizontalAlignment="Left" Margin="354,48,0,0" VerticalAlignment="Top" Width="75" Click="selectAirfoil"/>
+        <Label x:Name="titleLabel" Content="NX AIRFOIL EXTRUDER" HorizontalAlignment="Left" Margin="104,0,0,0" VerticalAlignment="Top" FontSize="22"/>
+        <Label x:Name="labelSelectAirfoil" Content="1. Select Airfoil:" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" Width="102"/>
+        <TextBox x:Name="filePath" HorizontalAlignment="Left" Height="23" Margin="112,48,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="224"/>
+        <Label x:Name="labelExtrudeLength" Content="2. Extrude Length (mm):" HorizontalAlignment="Left" Margin="10,92,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="extrudeLength" HorizontalAlignment="Left" Height="23" Margin="151,95,0,0" TextWrapping="Wrap" Text="100" VerticalAlignment="Top" Width="120" PreviewTextInput="limitTextInput"/>
+        <Label x:Name="labelScale" Content="3. Select Scale:" HorizontalAlignment="Left" Margin="10,140,0,0" VerticalAlignment="Top"/>
+        <Slider x:Name="slider" HorizontalAlignment="Left" Margin="112,145,0,0" VerticalAlignment="Top" Width="317"/>
+        <Label x:Name="goLabel" Content="4. Create NX Part:" HorizontalAlignment="Left" Margin="10,195,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="goButton" Content="Go" HorizontalAlignment="Left" Margin="118,195,0,0" VerticalAlignment="Top" Width="75"/>
     </Grid>
 </Window>
